인덱스 수정

--- a/index.html
+++ b/index.html
@@ -53,26 +53,42 @@
         <div class="container text-center">
             <h2 class="mb-5 fw-bold">바른플러스 사업분야</h2>
             <div class="row g-4">
-                <div class="col-md-3">
-                    <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>제조 / 생산</h3>
-                        <h4>반도체 / 디스플레이<br>
-                            자동차 부품 / 전자 부품<br>
-                            화장품 / 생필품  </h4>
+                <div class="col-md-6 col-lg-3">
+                    <div class="card biz-card shadow-sm p-4 border-top border-primary border-4">
+                        <div class="icon-box text-center">🏗️</div>
+                        <h4 class="fw-bold text-center mb-4">제조 / 생산</h4>
+                        <ul class="biz-list text-muted">
+                            <li>제품 조립 및 생산 라인</li>
+                            <li>품질 검사 및 QC</li>
+                            <li>포장 및 출하 관리</li>
+                            <li>현장 리더(반장) 파견</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>물류 / 유통</h3>
-                        <h4>입출고 / 피킹 / 포장<br>
-                            배차 / 운송</h4>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="card biz-card shadow-sm p-4 border-top border-primary border-4">
+                        <div class="icon-box text-center">📦</div>
+                        <h4 class="fw-bold text-center mb-4">물류 / 유통</h4>
+                        <ul class="biz-list text-muted">
+                            <li>상하차 및 분류 업무</li>
+                            <li>피킹 / 패킹 서비스</li>
+                            <li>재고 및 입출고 관리</li>
+                            <li>센터 운영 대행</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card h-100 border-0 shadow-sm p-4">
-                        <h3>시설/ 미화</h3>
-                        <h4>시설관리<br>
-                            청소 / 미화</h4>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="card biz-card shadow-sm p-4 border-top border-primary border-4">
+                        <div class="icon-box text-center">🧹</div>
+                        <h4 class="fw-bold text-center mb-4">시설 / 미화</h4>
+                        <ul class="biz-list text-muted">
+                            <li>공장 및 빌딩 정기 청소</li>
+                            <li>사무 공간 방역/미화</li>
+                            <li>시설물 유지 보수</li>
+                            <li>보안 및 주차 관리</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
