--- a/about.html
+++ b/about.html
@@ -11,24 +11,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">바른플러스</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="about.html">회사소개</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="business.html">사업분야</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="service.html">서비스</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="inquiry-corp.html">견적문의</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="inquiry-job.html">구직문의</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="tel:010-8571-6471">전화연결</a>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div id=""header-php"></div>
 
     <header class="page-header text-center">
         <div class="container">
@@ -112,18 +95,23 @@
     </div>
 </section>
 
+<div id="footer-php"></div>
 
+    <script>
+    // 상단바 불러오기
+    fetch('header.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('header-php').innerHTML = data;
+        });
 
-    <footer class="footer">
-        <div class="container text-center">
-            <p><strong>바른플러스</strong> <br>
-                |  본사 : 충남 천안시 서북구 성성동 1001, G1비즈캠퍼스 12층 1222호  |<br>
-                |  지사 : 경기도 평택시 송탄로 254, 3층  |</p>
-            <p>Copyright © 2026 Barun Plus. All Rights Reserved.</p>
-            <a href="privacy.html" class="text-decoration-none text-muted me-3">개인정보처리방침</a>
-            <a href="terms.html" class="text-decoration-none text-muted">이용약관</a>
-        </div>
-    </footer>
+    // 하단바 불러오기
+    fetch('footer.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('footer-php').innerHTML = data;
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
