--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div id=""header-php"></div>
+    <div id="header-php"></div>
 
     <header class="hero-section">
         <div class="container">
