--- a/inquiry-job.html
+++ b/inquiry-job.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div id=""header-php"></div>
+    <div id="header-php"></div>
 
     <header class="page-header text-center">
         <div class="container">
