--- a/terms.html
+++ b/terms.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-light">
 
-    <div id=""header-php"></div>
+    <div id="header-php"></div>
 
     <div class="container mb-5">
         <div class="legal-content border">
