--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             
             <h1 class="display-4 fw-bold">
-                <span class="main-title-sub">TOTAL HR PARTNER</span><br>
+                <span class="main-title-sub">Total HR Partner</span><br>
                     바른플러스
             </h1>
 
