--- a/header.html
+++ b/header.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="index.html">바른플러스</a>
+            <a class="navbar-brand" href="index.html">
+                <img src="assets/img/logo.png" alt="바른플러스 로고" style="height: 40px; width: auto;">
+            </a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
