--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logo.png" alt="바른플러스 로고" style="height: 40px; width: auto;">
+                <img src="assets/img/logo_1.png" alt="바른플러스 로고" style="height: 40px; width: auto;">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
