네비 색상변경

--- a/header.html
+++ b/header.html
@@ -9,12 +9,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="about.html">회사소개</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="business.html">사업분야</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="service.html">서비스</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="inquiry-corp.html">견적문의</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="inquiry-job.html">구직문의</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="tel:010-8571-6471">전화연결</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav fw-bold" href="about.html">회사소개</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav fw-bold" href="business.html">사업분야</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav fw-bold" href="service.html">서비스</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav fw-bold" href="inquiry-corp.html">견적문의</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav fw-bold" href="inquiry-job.html">구직문의</a></li>
+                    <li class="nav-item"><a class="nav-link custom-nav fw-bold" href="tel:010-8571-6471">전화연결</a></li>
                 </ul>
             </div>
         </div>
