--- a/service.html
+++ b/service.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="feature-box bg-white h-100">
-                        <i class="bi bi-shield-check-fill feature-icon"></i>
+                        <i class="bi bi-shield-fill-check feature-icon"></i>
                         <h5 class="fw-bold">철저한 노무 관리</h5>
                         <p class="small">근로기준법 및 안전 관련 법규를 엄격히 준수하여 고객사의 법적 리스크를 완벽히 차단합니다.</p>
                     </div>
