--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
     <link rel="stylesheet" href="style.css">
+    <meta name="naver-site-verification" content="751d471ffdd3d221df541199de52f7bf8a09714b" />
 </head>
 
 <body>
