--- a/business.html
+++ b/business.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>바른플러스</title>
+    <title>바른플러스 | 제조·물류 위탁 및 인력 아웃소싱 전문 기업</title>
+
+    <meta name="description" content="신속한 인력 공급과 철저한 노무 관리, 바른플러스가 기업의 생산성 극대화를 실현합니다. 천안 본사 및 평택 지사 운영.">
+
+    <meta name="keywords" content="바른플러스, 인력공급, 물류위탁, 제조위탁, 아웃소싱, 천안인력, 평택인력">
+
+    <meta property="og:title" content="바른플러스">
+    <meta property="og:description" content="제조·물류 위탁 및 인력 아웃소싱 전문 파트너">
+    <meta property="og:url" content="https://barunplus.com">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
