타이틀수정

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>바른플러스 | 제조·물류 위탁 및 인력 아웃소싱 전문 기업</title>
+    <title>바른플러스 | 제조·물류 종합 아웃소싱 전문 기업</title>
 
     <meta name="description" content="신속한 인력 공급과 철저한 노무 관리, 바른플러스가 기업의 생산성 극대화를 실현합니다. 천안 본사 및 평택 지사 운영.">
 
