--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <title>천안 평택 안성 아웃소싱 전문 바른플러스 | 제조·물류 아웃소싱</title>
     <meta name="description" content="천안·평택·안성 아웃소싱 전문 바른플러스. 신속한 인력 공급과 철저한 노무 관리로 물류 및 제조 기업의 생산성을 극대화합니다.">
-    <meta name="keywords" content="바른플러스, 천안아웃소싱, 평택아웃소싱, 안성아웃소싱, 물류아웃소싱, 제조아웃소싱, 인력공급">
+    <meta name="keywords" content="바른플러스, 천안아웃소싱, 평택아웃소싱, 안성아웃소싱, 물류아웃소싱, 제조아웃소싱, 인력공급, 현장중심형">
     
     <meta property="og:title" content="바른플러스 | 천안·평택·안성 아웃소싱 전문">
 <meta property="og:description" content="제조·물류 아웃소싱 및 인력 관리 전문 파트너. 바른플러스가 기업의 운영 효율을 높여드립니다.">
